--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,7 @@ body {
 }
 
 .gradient-bg-welcome {
-  background-color: #0f0e13;
+  background-color: #177ab3;
   background-image: radial-gradient(
       at 0% 0%,
       hsla(253, 16%, 7%, 1) 0,
@@ -24,8 +24,18 @@ body {
     radial-gradient(at 100% 0%, hsla(339, 49%, 30%, 1) 0, transparent 50%);
 }
 
-.gradient-bg-services {
-  background-color: #0f0e13;
+/* .gradient-bg-signin {
+  background-color: #177ab3;
+  background-image: radial-gradient(
+      at 0% 0%,
+      hsla(253, 16%, 7%, 1) 0,
+      transparent 50%
+    ),
+    radial-gradient(at 50% 100%, hsla(225, 39%, 25%, 1) 0, transparent 50%);
+} */
+
+/* .gradient-bg-services {
+  background-color: #177ab3;
   background-image: radial-gradient(
       at 0% 0%,
       hsla(253, 16%, 7%, 1) 0,
@@ -35,7 +45,7 @@ body {
 }
 
 .gradient-bg-transactions {
-  background-color: #0f0e13;
+  background-color: #177ab3;
   background-image: radial-gradient(
       at 0% 100%,
       hsla(253, 16%, 7%, 1) 0,
@@ -45,14 +55,14 @@ body {
 }
 
 .gradient-bg-footer {
-  background-color: #0f0e13;
+  background-color: #177ab3;
   background-image: radial-gradient(
       at 0% 100%,
       hsla(253, 16%, 7%, 1) 0,
       transparent 53%
     ),
     radial-gradient(at 50% 150%, hsla(339, 49%, 30%, 1) 0, transparent 50%);
-}
+} */
 
 .blue-glassmorphism {
   background: rgb(39, 51, 89, 0.4);
